--- a/src/main/resources/templates/orderForm.html
+++ b/src/main/resources/templates/orderForm.html
@@ -18,28 +18,52 @@
     <h3>Deliver my taco masterpieces to...</h3>
     <label for="name">Name: </label>
     <input id="name" type="text" th:field="*{name}"/>
+    <span class="validationError"
+          th:if="${#fields.hasErrors('name')}"
+          th:errors="*{name}">Name Error</span>
     <br/>
     <label for="street">Street address: </label>
     <input id="street" type="text" th:field="*{street}"/>
+    <span class="validationError"
+          th:if="${#fields.hasErrors('street')}"
+          th:errors="*{street}">Street Error</span>
     <br/>
     <label for="city">City: </label>
     <input id="city" type="text" th:field="*{city}"/>
+    <span class="validationError"
+          th:if="${#fields.hasErrors('city')}"
+          th:errors="*{city}">City Error</span>
     <br/>
     <label for="state">State: </label>
     <input id="state" type="text" th:field="*{state}"/>
+    <span class="validationError"
+          th:if="${#fields.hasErrors('state')}"
+          th:errors="*{state}">State Error</span>
     <br/>
     <label for="zip">Zip code: </label>
     <input id="zip" type="text" th:field="*{zip}"/>
+    <span class="validationError"
+          th:if="${#fields.hasErrors('zip')}"
+          th:errors="*{zip}">Zip Code Error</span>
     <br/>
     <h3>Here's how I'll pay...</h3>
     <label for="ccNumber">Credit Card #: </label>
     <input id="ccNumber" type="text" th:field="*{ccNumber}"/>
+    <span class="validationError"
+          th:if="${#fields.hasErrors('ccNumber')}"
+          th:errors="*{ccNumber}">CC Num Error</span>
     <br/>
     <label for="ccExpiration">Expiration: </label>
     <input id="ccExpiration" type="text" th:field="*{ccExpiration}"/>
+    <span class="validationError"
+          th:if="${#fields.hasErrors('ccExpiration')}"
+          th:errors="*{ccExpiration}">CC EXP Error</span>
     <br/>
     <label for="ccCVV">CVV: </label>
     <input id="ccCVV" type="text" th:field="*{ccCVV}"/>
+    <span class="validationError"
+          th:if="${#fields.hasErrors('ccCVV')}"
+          th:errors="*{ccCVV}">CC CVV Error</span>
     <br/>
     <input type="submit" value="Submit order"/>
 </form>
